#---------------------------------------------------------------------#
#------------------- Set minimum cmake version -----------------------#
cmake_minimum_required(VERSION 3.20)
#---------------------------------------------------------------------#
#----------------------- Set data project ----------------------------#
project(HTTP
        VERSION 0.0.1
        DESCRIPTION "HTTP library"
        LANGUAGES CXX)
#---------------------------------------------------------------------#
#------------------------ Set CXX standard ---------------------------#
set(CMAKE_CXX_STANDARD 20)
#---------------------------------------------------------------------#
#-------------------------- Add directory ----------------------------#
add_subdirectory(src)
add_subdirectory(app)