#---------------------------------------------------------------------#
#-------------------------- Set name file ----------------------------#
set(PROJECT app)
#------------------------- Set source file ---------------------------#
#---------------------------------------------------------------------#
set(PROJECT_SOURCE app.cpp)
#---------------------------------------------------------------------#
#--------------------------- Find package ----------------------------#
#find_package()
#---------------------------------------------------------------------#
#-------------------------- Add executable ---------------------------#
add_executable(${PROJECT}
        ${PROJECT_SOURCE})
#-------------------------- Link libraries ---------------------------#
#---------------------------------------------------------------------#
target_link_libraries(${PROJECT} http)
