#---------------------------------------------------------------------#
#----------------------Установка имени библиотеки --------------------#
#---------------------------------------------------------------------#
set(LIB_NAME http)
#---------------------------------------------------------------------#
#---------------------------Вывод сообщений --------------------------#
#---------------------------------------------------------------------#
message("-- LIB NAME = ${LIB_NAME}")
message ( "-- SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}" )
message ( "-- BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}" )
#---------------------------------------------------------------------#
#----------------------Установка стандарта языка ---------------------#
#---------------------------------------------------------------------#
set(CMAKE_CXX_STANDARD 20)
#---------------------------------------------------------------------#
#------------------Поиск и загрузка настроек проекта -----------------#
#---------------------------------------------------------------------#
find_package(Threads REQUIRED)
#---------------------------------------------------------------------#
#-------------------Определение заголовочных файлов ------------------#
#---------------------------------------------------------------------#
set(LIB_PATH ${PROJECT_SOURCE_DIR}/include/http)
set(HEADER_LIST ${LIB_PATH}/http_client.hpp
        ${LIB_PATH}/http_server.hpp)
#---------------------------------------------------------------------#
#---------------------Установка исполняемых файлов -------------------#
#---------------------------------------------------------------------#
set(SOURCE http_client.cpp
        http_server.cpp)
#---------------------------------------------------------------------#
#-------------------------Добовление библиотеки ----------------------#
#---------------------------------------------------------------------#
add_library(${LIB_NAME}
        ${SOURCE}
        ${HEADER_LIST})
#---------------------------------------------------------------------#
#---------------------Задать подключаемые каталоги -------------------#
#---------------------------------------------------------------------#
target_include_directories(${LIB_NAME} PUBLIC
        ${PROJECT_SOURCE_DIR}/include/http)
#---------------------------------------------------------------------#
#----------------Добавить ожидаемые функции компилятора --------------#
#---------------------------------------------------------------------#
target_compile_features(${LIB_NAME} PUBLIC cxx_std_20)
#---------------------------------------------------------------------#
#---------------------------------------------------------------------#
#---------------------------------------------------------------------#
install(DIRECTORY ${LIB_PATH} DESTINATION include)
install(TARGETS http EXPORT httpConfig)
